--- a/Quotify/en.lproj/QuotifyViewController.xib
+++ b/Quotify/en.lproj/QuotifyViewController.xib
@@ -44,7 +44,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="774585933">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -58,6 +58,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 10}, {320, 45}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="242252182"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -71,6 +72,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 49}, {320, 431}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="440876757"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -84,6 +86,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 464}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1065744599"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -118,6 +121,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 92}, {278, 66}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="650439003"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -155,6 +159,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 174}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="73331945"/>
 								<reference key="IBUIBackgroundColor" ref="1004154975"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -195,6 +200,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 213}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="222395756"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -225,6 +231,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{193, 280}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="806558314"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -249,6 +256,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{193, 280}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="810476446"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -259,6 +267,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 417}, {280, 43}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="985716015"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -287,6 +296,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{266, 217}, {24, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="997499922"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -300,6 +310,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 332}, {165, 48}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991126898"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -326,6 +337,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 280}, {165, 44}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="725837686"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -346,6 +358,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{7, 16}, {23, 30}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="465507396"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -365,6 +378,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{3, 74}, {27, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="605860082"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -378,6 +392,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{289, 147}, {27, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="189937787"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -391,6 +406,8 @@
 								<int key="NSvFlags">-2147483356</int>
 								<string key="NSFrame">{{273, 429}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -399,6 +416,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{266, 177}, {24, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="904665774"/>
 								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -424,6 +442,7 @@
 						</object>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="767594282"/>
 						<reference key="IBUIBackgroundColor" ref="1004154975"/>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -433,6 +452,8 @@
 					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="89788679"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -5285,12 +5306,12 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">addPersonPressed:</string>
+						<string key="label">showContacts:</string>
 						<reference key="source" ref="73331945"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">160</int>
+					<int key="connectionID">191</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -5668,7 +5689,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">189</int>
+			<int key="maxID">191</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5679,85 +5700,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FBLoginButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PeopleAdderViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>backToMainView:</string>
-							<string>doneAddingPeople:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>backToMainView:</string>
-							<string>doneAddingPeople:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">backToMainView:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">doneAddingPeople:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTwitnesses</string>
-							<string>backButton</string>
-							<string>doneButton</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTPickerTextField</string>
-							<string>UIBarButtonItem</string>
-							<string>UIBarButtonItem</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTwitnesses</string>
-							<string>backButton</string>
-							<string>doneButton</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">TTwitnesses</string>
-								<string key="candidateClassName">TTPickerTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">backButton</string>
-								<string key="candidateClassName">UIBarButtonItem</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">doneButton</string>
-								<string key="candidateClassName">UIBarButtonItem</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PeopleAdderViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -5777,9 +5719,11 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>imageBoxPressed:</string>
 							<string>quotifyPressed:</string>
 							<string>settingsPressed:</string>
+							<string>showContacts:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -5806,6 +5750,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>imageBoxPressed:</string>
 							<string>quotifyPressed:</string>
 							<string>settingsPressed:</string>
+							<string>showContacts:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -5849,13 +5794,16 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 								<string key="name">settingsPressed:</string>
 								<string key="candidateClassName">id</string>
 							</object>
+							<object class="IBActionInfo">
+								<string key="name">showContacts:</string>
+								<string key="candidateClassName">id</string>
+							</object>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTwitnesses</string>
 							<string>addPersonButton</string>
 							<string>addPersonView</string>
 							<string>addPersonViewController</string>
@@ -5864,7 +5812,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>hideKeyboardButton</string>
 							<string>imageBox</string>
 							<string>locLabel</string>
-							<string>peopleAdderViewController</string>
 							<string>quoteText</string>
 							<string>quotifier</string>
 							<string>quotifyButton</string>
@@ -5879,7 +5826,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTPickerTextField</string>
 							<string>UIButton</string>
 							<string>UIView</string>
 							<string>UIViewController</string>
@@ -5888,7 +5834,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>UIButton</string>
 							<string>UIImageView</string>
 							<string>UILabel</string>
-							<string>PeopleAdderViewController</string>
 							<string>UITextView</string>
 							<string>UITextField</string>
 							<string>UIButton</string>
@@ -5906,7 +5851,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTwitnesses</string>
 							<string>addPersonButton</string>
 							<string>addPersonView</string>
 							<string>addPersonViewController</string>
@@ -5915,7 +5859,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>hideKeyboardButton</string>
 							<string>imageBox</string>
 							<string>locLabel</string>
-							<string>peopleAdderViewController</string>
 							<string>quoteText</string>
 							<string>quotifier</string>
 							<string>quotifyButton</string>
@@ -5930,10 +5873,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">TTwitnesses</string>
-								<string key="candidateClassName">TTPickerTextField</string>
-							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">addPersonButton</string>
 								<string key="candidateClassName">UIButton</string>
@@ -5965,10 +5904,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<object class="IBToOneOutletInfo">
 								<string key="name">locLabel</string>
 								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">peopleAdderViewController</string>
-								<string key="candidateClassName">PeopleAdderViewController</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">quoteText</string>
@@ -6105,22 +6040,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/SuccessViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">TTPickerTextField</string>
-					<string key="superclassName">TTSearchTextField</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TTPickerTextField.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">TTSearchTextField</string>
-					<string key="superclassName">UITextField</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TTSearchTextField.h</string>
 					</object>
 				</object>
 			</object>
