--- a/Quotify/en.lproj/QuotifyViewController.xib
+++ b/Quotify/en.lproj/QuotifyViewController.xib
@@ -496,7 +496,7 @@
 							<object class="IBUIButton" id="879634299">
 								<reference key="NSNextResponder" ref="89788679"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{232, 275}, {26, 30}}</string>
+								<string key="NSFrame">{{232, 253}, {26, 30}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="232334114"/>
@@ -1227,7 +1227,6 @@
 							<reference ref="810476446"/>
 							<reference ref="997499922"/>
 							<reference ref="767594282"/>
-							<reference ref="879634299"/>
 							<reference ref="991126898"/>
 							<reference ref="806558314"/>
 							<reference ref="904665774"/>
@@ -1237,6 +1236,7 @@
 							<reference ref="232334114"/>
 							<reference ref="886184659"/>
 							<reference ref="73331945"/>
+							<reference ref="879634299"/>
 						</object>
 						<reference key="parent" ref="774585933"/>
 						<string key="objectName">View</string>
@@ -1625,11 +1625,9 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>addPersonPressed:</string>
 							<string>backToMainView:</string>
 							<string>backToQuoteEntry:</string>
 							<string>doneAddingPeople:</string>
-							<string>emailEditingEnded:</string>
 							<string>fbButtonClicked:</string>
 							<string>hideKeyboard:</string>
 							<string>imageBoxPressed:</string>
@@ -1641,8 +1639,6 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -1660,11 +1656,9 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>addPersonPressed:</string>
 							<string>backToMainView:</string>
 							<string>backToQuoteEntry:</string>
 							<string>doneAddingPeople:</string>
-							<string>emailEditingEnded:</string>
 							<string>fbButtonClicked:</string>
 							<string>hideKeyboard:</string>
 							<string>imageBoxPressed:</string>
@@ -1677,10 +1671,6 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBActionInfo">
-								<string key="name">addPersonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
 								<string key="name">backToMainView:</string>
 								<string key="candidateClassName">id</string>
 							</object>
@@ -1690,10 +1680,6 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">doneAddingPeople:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">emailEditingEnded:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -1734,8 +1720,6 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTwitnesses</string>
-							<string>addPersonButton</string>
 							<string>addPersonView</string>
 							<string>addPersonViewController</string>
 							<string>addSpeakerButton</string>
@@ -1748,9 +1732,7 @@
 							<string>hideKeyboardButton</string>
 							<string>imageBox</string>
 							<string>locLabel</string>
-							<string>peopleAdderViewController</string>
 							<string>quoteText</string>
-							<string>quotifier</string>
 							<string>quotifierTF</string>
 							<string>quotifyButton</string>
 							<string>quotifyingActivityIndicator</string>
@@ -1764,8 +1746,6 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTPickerTextField</string>
-							<string>UIButton</string>
 							<string>UIView</string>
 							<string>UIViewController</string>
 							<string>UIButton</string>
@@ -1778,9 +1758,7 @@
 							<string>UIButton</string>
 							<string>UIImageView</string>
 							<string>UILabel</string>
-							<string>PeopleAdderViewController</string>
 							<string>UITextView</string>
-							<string>UITextField</string>
 							<string>UITextField</string>
 							<string>UIButton</string>
 							<string>UIActivityIndicatorView</string>
@@ -1797,8 +1775,6 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>TTwitnesses</string>
-							<string>addPersonButton</string>
 							<string>addPersonView</string>
 							<string>addPersonViewController</string>
 							<string>addSpeakerButton</string>
@@ -1811,9 +1787,7 @@
 							<string>hideKeyboardButton</string>
 							<string>imageBox</string>
 							<string>locLabel</string>
-							<string>peopleAdderViewController</string>
 							<string>quoteText</string>
-							<string>quotifier</string>
 							<string>quotifierTF</string>
 							<string>quotifyButton</string>
 							<string>quotifyingActivityIndicator</string>
@@ -1827,14 +1801,6 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">TTwitnesses</string>
-								<string key="candidateClassName">TTPickerTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">addPersonButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">addPersonView</string>
 								<string key="candidateClassName">UIView</string>
@@ -1884,16 +1850,8 @@
 								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">peopleAdderViewController</string>
-								<string key="candidateClassName">PeopleAdderViewController</string>
-							</object>
-							<object class="IBToOneOutletInfo">
 								<string key="name">quoteText</string>
 								<string key="candidateClassName">UITextView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">quotifier</string>
-								<string key="candidateClassName">UITextField</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">quotifierTF</string>
@@ -1962,7 +1920,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>imageBox</string>
 							<string>locationLabel</string>
-							<string>quoteView</string>
+							<string>quoteLabel</string>
 							<string>speaker</string>
 							<string>theNewQuoteButton</string>
 						</object>
@@ -1970,7 +1928,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
 							<string>UILabel</string>
-							<string>UITextView</string>
+							<string>UILabel</string>
 							<string>UILabel</string>
 							<string>UIButton</string>
 						</object>
@@ -1981,7 +1939,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>imageBox</string>
 							<string>locationLabel</string>
-							<string>quoteView</string>
+							<string>quoteLabel</string>
 							<string>speaker</string>
 							<string>theNewQuoteButton</string>
 						</object>
@@ -1996,8 +1954,8 @@
 								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">quoteView</string>
-								<string key="candidateClassName">UITextView</string>
+								<string key="name">quoteLabel</string>
+								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">speaker</string>
